<resources>
    <string name="app_name">Amas_Messenger (Beta)</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="back_to_sign_in">Back to Sign in </string>
    <string name="ask_account_existence">Doesn\'t have an account?</string>
    <string name="select_photo">Select a Photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="send">Send</string>
    <string name="message_hint">Enter your message here</string>

</resources>
